--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,6 +1,6 @@
 set_property(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS _GNU_SOURCE DONT_DEPRECATE_ERRNO)
 
-set(tools tokudb_dump tokuftdump tokuft_logprint tdb-recover ftverify ba_replay)
+set(tools tokudb_dump tokuftdump tokuft_logprint tdb-recover ftverify ba_replay tokudb_convert_to_dir_per_db)
 foreach(tool ${tools})
   add_executable(${tool} ${tool})
   add_dependencies(${tool} install_tdb_h)
@@ -14,4 +14,5 @@ target_link_libraries(ftverify m)
 
 install(TARGETS tokuftdump DESTINATION bin COMPONENT tokukv_tools)
 install(TARGETS tokuft_logprint DESTINATION bin COMPONENT tokukv_tools)
+install(TARGETS tokudb_convert_to_dir_per_db DESTINATION bin COMPONENT tokukv_tools)
 
