--- a/portability/CMakeLists.txt
+++ b/portability/CMakeLists.txt
@@ -8,7 +8,7 @@ set(tokuportability_srcs
   portability
   toku_assert
   toku_crash
-  toku_instr_mysql
+#  toku_instr_mysql
   toku_path
   toku_pthread
   toku_time
